--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.0",
+    "@react-native-firebase/analytics": "^23.4.0",
+    "@react-native-firebase/app": "^23.3.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/common": "^12.3.0",
