--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "clean": "./scripts/clean.sh",
     "clean-start": "npx react-native clean-project && npx pod-install && npm run clean && npm start -- --reset-cache",
     "test": "jest tests/integration && jest tests/unit tests/helpers",
+    "test:unit": "jest tests/unit tests/helpers",
+    "test:integration": "jest tests/integration",
     "test:clear": "jest --clearCache",
     "test:memory": "jest --runInBand --logHeapUsage",
     "lint": "npm run lint:eslint && npm run lint:flow && npm run lint:rubocop",
