--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -31,7 +31,7 @@ jobs:
   build:
     needs: checksecret
     if: needs.checksecret.outputs.is_SECRETS_PRESENT_set == 'true'
-    runs-on: macos-15-large
+    runs-on: macos-15
     # Kill the task if not finished after 120 minutes
     timeout-minutes: 120
 
@@ -101,13 +101,6 @@ jobs:
     - name: Build test app
       run: npm run e2e:build:ios
 
-    - name: Debugging
-      run: |
-        echo $GITHUB_WORKSPACE
-        ls -l $GITHUB_WORKSPACE
-        ls -l $GITHUB_WORKSPACE/ios/build/Build/Products/Release-iphonesimulator
-        ls -l $GITHUB_WORKSPACE/ios/build/Build/Products/Release-iphonesimulator/iNaturalistReactNative.app
-
     - name: Create temp file in workspace root
       run: touch empty.txt
 
@@ -121,7 +114,7 @@ jobs:
 
   test:
     needs: build
-    runs-on: macos-15-large
+    runs-on: macos-15
     # Kill the task if not finished after 120 minutes
     timeout-minutes: 120
 
