--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -9,7 +9,7 @@ concurrency:
 jobs:
   checksecret:
     name: check for oauth client
-    runs-on: macos-15
+    runs-on: macos-latest
     outputs:
       is_SECRETS_PRESENT_set: ${{ steps.checksecret_job.outputs.is_SECRETS_PRESENT_set }}
     steps:
@@ -24,7 +24,7 @@ jobs:
   test:
     needs: checksecret
     if: needs.checksecret.outputs.is_SECRETS_PRESENT_set == 'true'
-    runs-on: macos-15
+    runs-on: macos-latest
     # Kill the task if not finished after 60 minutes
     timeout-minutes: 60
 
@@ -111,7 +111,7 @@ jobs:
     - name: Download the small example cv and geomodel
       run: npm run add-example-model -- -f=main
 
-    # Macos-15 runner has 3 Java versions pre-installed, if not specified as here, the build step errors with requiring at least Java 11 or higher
+    # Macos-latest runner has 3 Java versions pre-installed, if not specified as here, the build step errors with requiring at least Java 11 or higher
     # So, this step is needed for the apk build step, but somehow this is breaking emulator setup, so it is placed here
     - name: Set up JDK 11
       uses: actions/setup-java@v4
@@ -158,7 +158,7 @@ jobs:
     name: Notify Slack
     needs: test
     if: ${{ success() || failure() }}
-    runs-on: macos-15
+    runs-on: macos-latest
     steps:
       - uses: iRoachie/slack-github-actions@v2.3.0
         if: env.SLACK_WEBHOOK_URL != null
