--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test:integration": "jest tests/integration",
     "test:clear": "jest --clearCache",
     "test:memory": "jest --runInBand --logHeapUsage",
-    "lint": "npm run lint:eslint && npm run lint:flow && npm run lint:rubocop",
-    "lint:fix": "npm run lint:eslint:fix && npm run lint:flow && npm run lint:rubocop:fix",
+    "lint": "npm-run-all --parallel lint:eslint lint:flow lint:rubocop",
+    "lint:fix": "npm-run-all lint:eslint:fix lint:flow lint:rubocop:fix",
     "lint:staged:fix": "npx lint-staged && npm run lint:flow",
     "lint:eslint": "eslint .",
     "lint:eslint:fix": "eslint . --fix",
@@ -198,6 +198,7 @@
     "jest-slow-test-reporter": "^1.0.0",
     "nock": "^13.5.6",
     "node-downloader-helper": "^2.1.9",
+    "npm-run-all2": "^8.0.4",
     "patch-package": "^8.0.1",
     "react-native-clean-project": "^4.0.3",
     "react-native-config-node": "^0.0.3",
