--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
-    "@realm/react": "^0.11.0",
+    "@realm/react": "^0.20.0",
     "@sayem314/react-native-keep-awake": "^1.3.1",
     "@shopify/flash-list": "^1.8.3",
     "@tanstack/react-query": "5.55.4",
@@ -136,7 +136,7 @@
     "react-native-volume-manager": "^2.0.8",
     "react-native-webview": "^13.15.0",
     "react-native-worklets-core": "^1.6.2",
-    "realm": "20.1.0",
+    "realm": "^20.2.0",
     "sanitize-html": "^2.13.0",
     "uuid": "^11.1.0",
     "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision#60437a7a9c78efa2501e0009a79141b19ad347ea",
