--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -1,9 +1,9 @@
 name: e2e-Android
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - 'android-detox'
+  push:
+    branches:
+      - 'android-detox'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -11,60 +11,13 @@ concurrency:
     
 jobs:
   test:
-    # using intel image, android emu currently can't run on Apple Silicon
-    # https://github.com/ReactiveCircus/android-emulator-runner/issues/350#issuecomment-3349718997
-    runs-on: macos-15-intel
+    runs-on: ubuntu-24.04
 
     steps:
-    - name: Debugging 1
-      run: |
-        java --version
-        echo $JAVA_HOME
-
     - name: Check out Git repository
       uses: actions/checkout@v4
       with:
-        fetch-depth: 1
-
-    # Use the Android command line tools to download an AOSP emulator image, and setup new avd
-    # x86_64 OR arm64-v8a <- intel vs M#
-    - name: Download Android Emulator Image
-      run: |
-        echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install "system-images;android-31;default;x86_64"
-        echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd -n Pixel_5_API_31_AOSP -d pixel --package 'system-images;android-31;default;x86_64'
-        $ANDROID_HOME/emulator/emulator -list-avds
-
-    - name: Cache node modules
-      uses: actions/cache@v4
-      id: cache
-      with:
-        path: node_modules
-        key: node-modules-${{ hashFiles('**/package-lock.json') }}
-  
-    - name: Rebuild detox from cache
-      if: steps.cache.outputs.cache-hit == 'true'
-      # Currently, (Detox 20) those two commands are macOS only
-      run: npx detox clean-framework-cache && npx detox build-framework-cache
-
-    # supposedly our current cache includes native modules like Realm
-    # that have compiled binaries specific to the environment where they were installed
-    # which might not be the same as the github actions environment
-    # so we need to rebuild them
-    - name: Rebuild native modules
-      if: steps.cache.outputs.cache-hit == 'true'
-      run: npm rebuild
-
-    - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: npm install
-
-      # We need these files to be present in the correct location for the build to succeed.
-      # TODO: this might potentially break the build if there are no actual keys in the example files
-      # it did so on iOS.
-    - name: Create google-services.json files from example
-      run: |
-        cp android/app/google-services.example.json android/app/src/debug/google-services.json
-        cp android/app/google-services.example.json android/app/src/release/google-services.json
+        fetch-depth: 0
 
     # Generate the secret files needed for a release build
     - name: Create .env file
@@ -96,32 +49,23 @@ jobs:
     - name: Download the small example cv and geomodel
       run: npm run add-example-model -- -f=main
 
-    # This is by far the longest step in this job, currently we are building the apk everytime, maybe there should be a more specific trigger for the entire job
-    - name: Build for detox
-      run: npm run e2e:build:android
-
-    # Starts the avd previously set-up by name
-    - name: Android Emulator
-      timeout-minutes: 10
-      continue-on-error: true
+    - name: Enable KVM
       run: |
-        echo "Starting emulator"
-        nohup $ANDROID_HOME/emulator/emulator -avd Pixel_5_API_31_AOSP -no-audio -no-snapshot -no-window -no-boot-anim -timezone America/Los_Angeles &
-        $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-        $ANDROID_HOME/platform-tools/adb devices
-        $ANDROID_HOME/platform-tools/adb emu geo fix -121.45356 46.51119 4392 12
-        echo "Emulator started"
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
 
-    - name: Ensure servers are running
-      run: |
-        # is rails running?
-        curl -I --fail "https://staging.inaturalist.org/ping"
-        # is node running & is ES working?
-        curl -I --fail "https://stagingapi.inaturalist.org/v2/taxa"
-
-    # Start the Android e2e tests with extensive logging and screen captures for failing tests
-    - name: Android Detox
-      run: npm run e2e:test:android -- --take-screenshots failing --record-videos failing -l debug
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 29
+        force-avd-creation: false
+        # this is faking whatever detox wants, we'll see what we need to do
+        avd-name: "Pixel_5_API_31_AOSP"
+        pre-emulator-launch-script: |
+          npm run e2e:build:android
+        script: |
+          npm run e2e:test:android -- --take-screenshots failing --record-videos failing -l debug
 
     # The artifacts for the failing tests are available for download on github.com on the page of the individual actions run
     - name: Store Detox artifacts on test failure
