--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -4,10 +4,10 @@
 name: e2e-iOS
 on:
   workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - 'main'
+  # pull_request:
+  # push:
+  #   branches:
+  #     - 'main'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
