--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -11,7 +11,7 @@ concurrency:
     
 jobs:
   test: 
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-24.04-large
 
     steps:
     - name: Check out Git repository
