--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -1,9 +1,9 @@
 name: e2e-Android
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - 'android-detox'
+  push:
+    branches:
+      - 'android-detox'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -11,7 +11,7 @@ concurrency:
     
 jobs:
   test: 
-    runs-on: ubuntu-24.04-large
+    runs-on: ubuntu-24.04-l
 
     steps:
     - name: Check out Git repository
