--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -57,29 +57,41 @@ jobs:
         sudo udevadm control --reload-rules
         sudo udevadm trigger --name-match=kvm
 
-    # - name: build
-    #   run: npm run e2e:build:android
+    - name: build app for detox
+      run: npm run e2e:build:android
 
-    # - name: Upload Android Detox app build
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: detox_app
-    #     path: android/app/build/outputs/apk/release/org.inaturalist.iNaturalistMobile-release.apk
-    #     retention-days: 5
+    - name: upload detox apks
+      uses: actions/upload-artifact@v4
+      with:
+        name: detox_app
+        path: |
+          package.json # having a "root" maintains the file structure when downloading
+          android/app/build/outputs/apk/debug/org.inaturalist.iNaturalistMobile-debug.apk
+          android/app/build/outputs/apk/androidTest/debug/org.inaturalist.iNaturalistMobile-debug-androidTest.apk
 
     - name: run tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
-        api-level: 31
-        force-avd-creation: false
+        api-level: 29
         # this is faking whatever detox wants, we'll see what we need to do
         avd-name: "Pixel_5_API_31_AOSP"
-        cmake: 3.22.1
-        pre-emulator-launch-script: npm run e2e:build:android
         script: |
           npm run e2e:test:android -- --take-screenshots failing --record-videos failing -l debug
 
-    # The artifacts for the failing tests are available for download on github.com on the page of the individual actions run
+    - name: Emulator logcat
+      if: failure()
+      # only attempt to logcat if we can still connect to the emu. 
+      # `-d` is important to not stay listening to the log buffer. ask me how I know
+      run: |
+        [ "$(adb devices | tail -n +2 | grep -c device)" -eq 1 ] && adb logcat -d > logcat.txt
+
+    - name: Store emulator logcat log on test failure
+      uses: actions/upload-artifact@v4
+      if: failure()
+      with:
+        name: emulator-logcat
+        path: logcat.txt
+
     - name: Store Detox artifacts on test failure
       uses: actions/upload-artifact@v4
       if: failure()
