--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -36,3 +36,5 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+VisionCamera_enableFrameProcessors = false
