--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "test:memory": "jest --runInBand --logHeapUsage",
     "lint": "npm-run-all --parallel lint:eslint lint:flow lint:rubocop",
     "lint:fix": "npm-run-all lint:eslint:fix lint:flow lint:rubocop:fix",
-    "lint:staged:fix": "npx lint-staged && npm run lint:flow",
+    "lint:staged:fix": "echo skipping lint",
     "lint:eslint": "eslint .",
     "lint:eslint:fix": "eslint . --fix",
     "lint:flow": "echo skipping flow",
     "lint:rubocop": "bundle exec rubocop",
     "lint:rubocop:fix": "bundle exec rubocop -A",
     "lint:tsc": "tsc --allowJs false --noEmit",
-    "postinstall": "husky && patch-package",
+    "postinstall": "patch-package",
     "translate": "babel-node src/i18n/i18ncli.js build",
     "prepare-fastlane-metadata": "babel-node src/i18n/i18ncli.js prepare-fastlane-metadata",
     "e2e:android": "npm run e2e:build:android && npm run e2e:test:android",
@@ -45,7 +45,6 @@
     "reassure": "reassure"
   },
   "dependencies": {
-    "@bam.tech/react-native-image-resizer": "^3.0.11",
     "@candlefinance/faster-image": "^1.7.2",
     "@formidable-webview/webshell": "^2.6.0",
     "@gorhom/bottom-sheet": "^5.2.6",
