--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -9,8 +9,8 @@ concurrency:
     
 jobs:
   build_and_test: 
-    runs-on: macos-15
-    # runs-on: ubuntu-24.04-m
+    # runs-on: macos-15
+    runs-on: ubuntu-24.04-l
 
     steps:
     - name: Check out Git repository
@@ -68,21 +68,14 @@ jobs:
         npm ci
         npm run add-example-model -- -f=main
 
-    # - name: Enable KVM
-    #   run: |
-    #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-    #     sudo udevadm control --reload-rules
-    #     sudo udevadm trigger --name-match=kvm
-
-    # - name: Build Android App
-    #   run: |
-    #     npx react-native build-android --tasks assembleRelease
+    - name: Enable KVM
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
 
     - name: Try fastlane
-      # if: ${{ success() || failure() }}
       run: |
-        brew install fastlane
-        gem install fastlane-sirp
         cp fastlane/example-Appfile fastlane/Appfile
         fastlane android build
 
