--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -50,6 +50,7 @@ jobs:
         ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
         ANDROID_ALIAS: ${{ secrets.ANDROID_ALIAS }}
       run: printf 'storePassword=%s\nkeyPassword=%s\nkeyAlias=%s\nstoreFile=release.keystore' "$ANDROID_KEY_STORE_PASSWORD" "$ANDROID_KEY_PASSWORD" "$ANDROID_ALIAS" > android/keystore.properties
+
     - name: Generate release keystore
       env:
         ANDROID_ALIAS: ${{ secrets.ANDROID_ALIAS }}
@@ -57,15 +58,19 @@ jobs:
         ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
       run: |
         keytool -genkeypair -v -noprompt -storetype PKCS12 -keystore release.keystore -alias "$ANDROID_ALIAS" -keyalg RSA -keysize 2048 -validity 10000 -storepass "$ANDROID_KEY_STORE_PASSWORD" -keypass "$ANDROID_KEY_PASSWORD" -dname "CN=mqttserver.ibm.com, OU=ID, O=IBM, L=Hursley, S=Hants, C=GB"
+
     - name: Move keystore
       run: mv release.keystore android/app/release.keystore
 
-    # Download the example model otherwise an error alert will be shown on app start, requires .env
+    - uses: actions/setup-node@v6
+
+    - name: Install JS dependencies
+      run: npm ci
+
     - name: Download the small example cv and geomodel & dependencies
       run: |
         export MAESTRO_VERSION="2.0.8"; curl -Ls "https://get.maestro.mobile.dev" | bash
         $HOME/.maestro/bin/maestro --help
-        npm ci
         npm run add-example-model -- -f=main
 
     - name: Enable KVM
