update smoke test to continue through FTUE since X untappable

--- a/e2e/maestro/android/smoke.yaml
+++ b/e2e/maestro/android/smoke.yaml
@@ -1,14 +1,13 @@
 appId: org.inaturalist.iNaturalistMobile
 ---
 - launchApp
-- extendedWaitUntil:
-    visible: iNaturalist
-    timeout: 10000
 
 # dismiss iNaturalist FTUE
-- runFlow:
-    when:
-      visible: Continue
-    commands:
-      - tapOn: Close
+- extendedWaitUntil:
+    visible: 
+    timeout: 10000
+- tapOn: "Continue"
+- tapOn: "Continue"
+- tapOn: "Continue"
+
 - assertVisible: Use iNaturalist to identify any living thing
