--- a/e2e/maestro/android/smoke.yaml
+++ b/e2e/maestro/android/smoke.yaml
@@ -4,7 +4,7 @@ appId: org.inaturalist.iNaturalistMobile
 
 # dismiss iNaturalist FTUE
 - extendedWaitUntil:
-    visible: 
+    visible: "Continue"
     timeout: 10000
 - tapOn: "Continue"
 - tapOn: "Continue"
