--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -63,6 +63,8 @@ jobs:
       run: mv release.keystore android/app/release.keystore
 
     - uses: actions/setup-node@v6
+      with:
+        cache: 'npm'
 
     - name: Install JS dependencies
       run: npm ci
